// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="css-3939p1 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-mocsp5"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="css-kevfw8 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1vphhlq"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="css-3939p1 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-mocsp5"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="css-19m2k92 "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-mocsp5"
  >
    Press me
  </div>
</Button>
`;
